<resources>
    <string name="app_name">ALOS PROJECT</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Drawer Opened</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="courses">Courses</string>
    <string name="invite">Invite</string>
    <string name="contact">Contact</string>
    <string name="user_name">User Name</string>
    <string name="sign_out">Signout</string>
    <string name="rate_us">Rate Us</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="not_register_yet">Not register yet?</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
</resources>